--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translate="false">ApexPod</string>
+    <string name="add_to_playlist_label">Add to Playlist</string>
+    <string name="remove_from_playlist_label">Remove from Playlist</string>
 </resources>
