--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name" translate="false">ApexPod</string>
     <string name="add_to_playlist_label">Add to Playlist</string>
+    <string name="no_playlists_label">No Playlists</string>
+    <string name="no_playlists_sub_label">After you create a playlist, it will appear here.</string>
 </resources>
